--- a/registration.html
+++ b/registration.html
@@ -164,7 +164,7 @@
       popup.style.display = "flex";
 
       setTimeout(() => {
-        window.location.href = "Login.html"; // Redirect to login
+        window.location.href = "login.html"; // Redirect to login
       }, 3000);
     });
   </script>
