--- a/Dailypractice.html
+++ b/Dailypractice.html
@@ -146,7 +146,7 @@
     </div>
     <button type="submit"><i class="fa-solid fa-paper-plane"></i> सबमिट करें</button>
     <div id="successMsg" class="success" style="display: none;">
-      ✅ आपका अभ्यास फॉर्म सफलतापूर्वक भेज दिया गया है!
+      "✅ आपका अभ्यास फॉर्म सफलतापूर्वक भेज दिया गया है! शिक्षक का जवाब जल्द ही इस पेज पर आपको दिखाई देगा। कृपया पेज को समय-समय पर चेक करते रहें।"  
     </div>
   </form>
 
