--- a/gallery.html
+++ b/gallery.html
@@ -163,23 +163,29 @@
       padding: 10px 0;
     }
 
-    nav a {
-      margin: 5px 10px;
-      background-color: #ffffff;
-      color: #003580;
-      padding: 10px 20px;
-      border-radius: 25px;
-      font-weight: 600;
-      text-decoration: none;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      transition: all 0.3s ease;
-    }
+    nav {
+  margin-top: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 12px;
+}
 
-    nav a:hover {
-      background-color: #007bff;
-      color: white;
-      transform: scale(1.05);
-    }
+nav a {
+  color: white;
+  text-decoration: none;
+  padding: 10px 18px;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 30px;
+  font-weight: bold;
+  transition: all 0.3s ease;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+nav a:hover {
+  background: #ffffff;
+  color: #004aad;
+}
     .button-section {
       display: flex;
       flex-wrap: wrap;
