--- a/student.html
+++ b/student.html
@@ -38,7 +38,7 @@ header p {
 	   font-family: algirian;
     }
 
-     nav {
+          nav {
       display: flex;
       justify-content: center;
       background: #003580;
@@ -46,22 +46,58 @@ header p {
       padding: 10px 0;
     }
 
-    nav a {
-      margin: 5px 10px;
-      background-color: #ffffff;
-      color: #003580;
-      padding: 10px 20px;
-      border-radius: 25px;
-      font-weight: 600;
-      text-decoration: none;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      transition: all 0.3s ease;
+    nav {
+  margin-top: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 12px;
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+  padding: 10px 18px;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 30px;
+  font-weight: bold;
+  transition: all 0.3s ease;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+nav a:hover {
+  background: #ffffff;
+  color: #004aad;
+}
+    .button-section {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 15px;
+      padding: 30px 20px;
     }
 
-    nav a:hover {
-      background-color: #007bff;
+    .styled-button {
+      background: linear-gradient(to right, #4facfe, #00f2fe);
+      border: none;
+      border-radius: 12px;
+      padding: 15px 25px;
+      font-size: 1rem;
+      font-weight: 600;
       color: white;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
+      cursor: pointer;
+      transition: transform 0.3s, background 0.3s;
+    } 
+	
+
+    .styled-button:hover {
       transform: scale(1.05);
+      background: linear-gradient(to right, #00f2fe, #4facfe);
+    }
+
+    .styled-button.active {f
+      background: #002f73;
     }
 
     .container {
@@ -161,11 +197,7 @@ header p {
         font-size: 2rem;
       }
 
-      nav {
-        flex-direction: column;
-      }
-
-      nav a {
+ nav a {
         text-align: center;
         border-top: 1px solid rgba(255, 255, 255, 0.2);
       }
