--- a/AskaDoubtForm.html
+++ b/AskaDoubtForm.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>📘 Daily Practice Planner - Student</title>
+  <title>Feature Coming Soon</title>
   <style>
     body {
       margin: 0;
@@ -63,75 +63,15 @@
     .back-button:hover {
       background-color: #0056b3;
     }
-
-    /* Style for the success message */
-    .success-msg {
-      background-color: #c8e6c9;
-      color: #388e3c;
-      padding: 20px;
-      border-radius: 12px;
-      font-size: 18px;
-      text-align: center;
-      margin-top: 20px;
-      display: none;
-    }
-
-    .question-section {
-      margin-bottom: 20px;
-    }
   </style>
 </head>
 <body>
 
   <div class="message-box">
-    <h2>📘 Submit Your Question</h2>
-    <form id="questionForm">
-      <label for="question">आपका सवाल (Your Question):</label><br>
-      <textarea id="question" rows="4" cols="50" required></textarea><br><br>
-      <button type="submit">Submit Question</button>
-    </form>
+    <h2>🔒 Feature Locked</h2>
+    <p>यह फीचर जल्द ही उपलब्ध होगा,<br> कृपया इंतजार करें।</p>
+    <button class="back-button" onclick="window.location.href='student.html'">🔙 वापस जाएं</button>
   </div>
-
-  <!-- Success message will appear here -->
-  <div class="success-msg" id="successMessage">
-    🎉 आपने सवाल सफलतापूर्वक भेज दिया है! आपका सवाल नीचे दिखेगा और शिक्षक का जवाब जल्द ही आपको मिलेगा। कृपया पेज को समय-समय पर चेक करते रहें! 🚀
-  </div>
-
-  <!-- Latest Question Section -->
-  <div class="question-section">
-    <h3>आपका सवाल:</h3>
-    <p id="latestQuestion">कोई सवाल नहीं है। कृपया अपना सवाल सबमिट करें।</p>
-  </div>
-
-  <script>
-    const form = document.getElementById('questionForm');
-    const questionText = document.getElementById('question');
-    const successMsg = document.getElementById('successMessage');
-    const latestQuestion = document.getElementById('latestQuestion');
-
-    form.addEventListener('submit', function(e) {
-      e.preventDefault();
-      
-      // Get the question value
-      const newQuestion = questionText.value.trim();
-
-      // If question is provided, update the question section
-      if (newQuestion) {
-        latestQuestion.textContent = newQuestion; // Display the new question
-
-        // Show success message
-        successMsg.style.display = 'block';
-
-        // Hide the success message after 5 seconds
-        setTimeout(() => {
-          successMsg.style.display = 'none';
-        }, 5000); // 5 seconds delay
-
-        // Clear the form input after submission
-        questionText.value = ''; // Clear the textarea for new input
-      }
-    });
-  </script>
 
 </body>
 </html>
