--- a/notes6th.html
+++ b/notes6th.html
@@ -69,7 +69,7 @@
 </head>
 <body>
 
-  <a href="https://sss10000.github.io/education/class-notes.html" class="back-btn">← Back to Classes</a>
+  <a href="/sssedu/class-notes.html" class="back-btn">← Back to Classes</a>
   
   <h1>📚 Class 6 - Subject-wise Notes</h1>
 
