--- a/contact.html
+++ b/contact.html
@@ -335,14 +335,14 @@ nav a:hover {
 
 <nav>
    <a href="index.html">Home</a>
-    <a href="Gallery.html">Gallery</a>
-    <a href="About.html">About</a>
-    <a href="Student.html">Student</a>
-    <a href="Notes.html" class="active">Notes</a>
-    <a href="Pdf.html">PDF</a>
-    <a href="Books.html">Books</a>
-    <a href="Class.html">Class</a>
-    <a href="Contact.html">Contact</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="about.html">About</a>
+    <a href="student.html">Student</a>
+    <a href="notes.html" class="active">Notes</a>
+    <a href="pdf.html">PDF</a>
+    <a href="books.html">Books</a>
+    <a href="class.html">Class</a>
+    <a href="contact.html">Contact</a>
 </nav>
 
 <div class="container">
