Update class 6th to 12th objectivemcq.html

--- a/class 6th to 12th objectivemcq.html
+++ b/class 6th to 12th objectivemcq.html
@@ -130,7 +130,7 @@
 </head>
 <body>
 
-  <button class="back-button" onclick="window.location.href='Notes.html'">
+  <button class="back-button" onclick="window.location.href='notes.html'">
     <i class="fas fa-arrow-left"></i> Back
   </button>
 
