--- a/notes.html
+++ b/notes.html
@@ -231,17 +231,17 @@ nav a:hover {
     <h1>SSS EDUCATION</h1>
     <p>Smart Learning for Smart Students</p>
   </header>
- <nav>
-   <a href="index.html">Home</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="About.html">About</a>
-    <a href="student.html">Student</a>
-    <a href="notes.html" class="active">Notes</a>
-    <a href="pdf.html">PDF</a>
-    <a href="books.html">Books</a>
-    <a href="class.html">Class</a>
-    <a href="contact.html">Contact</a>
-  </nav>
+<nav>
+  <a href="index.html">Home</a>
+  <a href="gallery.html">Gallery</a>
+  <a href="about.html">About</a>
+  <a href="student.html">Student</a>
+  <a href="notes.html">Notes</a>
+  <a href="pdf.html">PDF</a>
+  <a href="books.html">Books</a>
+  <a href="class.html">Class</a>
+  <a href="contact.html">Contact</a>
+</nav>
   <section class="notes-container">
     <h2>SELECT YOUR NOTES TYPE SUBJECTIVE OR/या OBJECTIVE</h2>
     <div class="notes-buttons">
