--- a/formula.html
+++ b/formula.html
@@ -188,9 +188,7 @@
 </head>
 <body>
 
-  <button class="back-button" onclick="window.history.back()">
-    <span>←</span> Back
-  </button>
+<a href="student.html">  <button class="back-button"><span>←</span> Back</button></a>
 
   <h1>📘 Select Your Class get math formula</h1>
 
